[GStreamer][EME] Base class for decryption support https://bugs.webkit.org/show_bug.cgi?id=162915

Reviewed by Xabier Rodriguez-Calvar.

Add common encryption base class.

This patch is authored by Philippe Normand <philn@igalia.com>.

* platform/graphics/gstreamer/eme/WebKitCommonEncryptionDecryptorGStreamer.cpp: Added.
(webkit_media_common_encryption_decrypt_class_init):
(webkit_media_common_encryption_decrypt_init):
(webKitMediaCommonEncryptionDecryptorFinalize):
(webkitMediaCommonEncryptionDecryptTransformCaps):
(webkitMediaCommonEncryptionDecryptTransformInPlace):
(webkitMediaCommonEncryptionDecryptSinkEventHandler):
(webKitMediaCommonEncryptionDecryptorChangeState):
(webKitMediaCommonEncryptionDecryptDefaultSetupCipher):
(webKitMediaCommonEncryptionDecryptDefaultReleaseCipher):
* platform/graphics/gstreamer/eme/WebKitCommonEncryptionDecryptorGStreamer.h: Added.

Canonical link: https://commits.webkit.org/181741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207887 268f45cc-cd09-0410-ab3c-d52691b4dbfc